export abstract class OutputApi {
  abstract sendMessage(text: String): void;
}