@startuml class
class GAS {
  + doPost(parameter): void
  + test(): void
}

class OutputApiFactory {
  + create(): OutputApi
}

abstract OutputApi {
  + send(text: String): void
}

class Slack
class Console

OutputApi <|-- Slack
OutputApi <|-- Console
OutputApiFactory --> OutputApi

class SlackBot {
  + run()
}
class ActionFactory
abstract Action {
  + do()
}
class Mention
class SetAtode

ActionFactory --> Action
Action <|-- Mention
Action <|-- SetAtode

class SlackMessage {
  - payload: Payload
}

class Payload {
  + get()
}

class Json {
  + get()
}

SlackMessage "1"--"1" Payload
Payload "1"--"1" Json


SlackBot --> SlackMessage

@enduml